--- a/index.html
+++ b/index.html
@@ -2,10 +2,99 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+
     <title>HTML Academy: Седона</title>
-    <p>Привет :)</p>
+
   </head>
   <body>
+<header class="page-header">
+<nav class="navigation>
+  <ul class="navigation-list">
+    <li class="navigation-item">
+      <a class="navigation-link" href="#">Главная</a>
+    </li>
+      <li class="navigation-item">
+        <a class="navigation-link" href="#">О Седоне</a>
+      </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">Гостиницы</a>
+          </li>
+          </ul>
+          <ul class="navigation-icon">
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">Поиск</a>
+            </li>
+              <li class="navigation-item">
+                <a class="navigation-link" href="#">Уведомления</a>
+              </li>
+                <li class="navigation-item">
+                  <a class="navigation-link" href="#">Хочу сюда!</a>
+                  </li>
+          </ul>
+  </nav>
+</header>
+<main class="main-index">
+<h1 class="visually-hidden">Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!
+  <img class="logo" src="#"alt="Логотип сайта о Седоне"
+  <h2 class="description">Седона — небольшой городок в Аризоне,
+    заслуживающий большего!</h2>
+    <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+<section page-items>
+    <ul class="description-list">
+<li class="description-head">
+<h3>Настоящий городок</h3>
+<p class="description-item">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+<ul class="advantages-list">
+<li class="advantages-item"></li>
+<h4 class="advantages-head">Небольшая площадь</h4>
+<p class="advantages-item">Все достопримечательности находятся очень близко</p>
+<li class="advantages-item"></li>
+<h4 class="advantages-head">Красивая
+  дорога</h4>
+<p class="advantages-item">Ехать в Седону из Лас-Вегаса совсем не скучно!</p><li class="advantages-item"></li>
+<h4 class="advantages-head">Мало
+  туристов</h4>
+<p class="advantages-item">Большинство едет в Гранд Каньон и толпится там</p>
+</ul>
+</ul>
+<ul class="description-list">
+  <li class="description-head">
+  <h3>Там есть мост дьявола</h3>
+  <p class="description-item">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+  <ul class="advantages-list">
+  <li class="advantages-item"></li>
+  <img class="advanteges-icon" src="#"alt="Жильё"
+    <h4 class="advantages-head">Жильё</h4>
+  <p class="advantages-item">Рекомендуем пожить в настоящем мотеле,
+    всё как в кино!</p>
+  <li class="advantages-item"></li>
+  <img class="advanteges-icon" src="#"alt="Еда"
+    <h4 class="advantages-head">Еда</h4>
+  <p class="advantages-item">Всегда заказывайте
+    топовый фирменный бургер, вы не разочаруетесь</p>
+  <li class="advantages-item"></li>
+  <img class="advanteges-icon" src="#"alt="Сувениры"
+    <h4 class="advantages-head">Сувениры</h4>
+  <p class="advantages-item">Не только китайского,
+    но и настоящего местного производства!</p>
+  </ul>
+</ul>
+</section>
+</main>
+<footer>
+  <section class="search-pull">
+<h2 class="search-head">Заинтересовались?</h2>
+<p class="search-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+<a class="button button-all" href="#">Поиск гостиницы в седоне</a>
+</section>
+<section subscribe>
+<h2 class="subscribe-head">Подпишитесь на рассылку</h2>
+<p class="subscribe-decription">Только полезная информация и никакого спама, честное бойскаутское!</p>
+<input type="text" name="email" value="Ваш e-mail">
+<input type="submit" value="Подписаться">
+</section>
+
+</footer>
 
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
 
