Footer и исправления кавычек тегов

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </header>
 <main class="main-index">
 <h1 class="visually-hidden">Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!
-  <img class="logo" src="#"alt="Логотип сайта о Седоне"
+  <img class="logo" src="#"alt="Логотип сайта о Седоне">
   <h2 class="description">Седона — небольшой городок в Аризоне,
     заслуживающий большего!</h2>
     <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
@@ -63,17 +63,17 @@
   <p class="description-item">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
   <ul class="advantages-list">
   <li class="advantages-item"></li>
-  <img class="advanteges-icon" src="#"alt="Жильё"
+  <img class="advanteges-icon" src="#"alt="Жильё">
     <h4 class="advantages-head">Жильё</h4>
   <p class="advantages-item">Рекомендуем пожить в настоящем мотеле,
     всё как в кино!</p>
   <li class="advantages-item"></li>
-  <img class="advanteges-icon" src="#"alt="Еда"
+  <img class="advanteges-icon" src="#"alt="Еда">
     <h4 class="advantages-head">Еда</h4>
   <p class="advantages-item">Всегда заказывайте
     топовый фирменный бургер, вы не разочаруетесь</p>
   <li class="advantages-item"></li>
-  <img class="advanteges-icon" src="#"alt="Сувениры"
+  <img class="advanteges-icon" src="#"alt="Сувениры">
     <h4 class="advantages-head">Сувениры</h4>
   <p class="advantages-item">Не только китайского,
     но и настоящего местного производства!</p>
@@ -93,8 +93,21 @@
 <input type="text" name="email" value="Ваш e-mail">
 <input type="submit" value="Подписаться">
 </section>
+<section class="contacts">
+<img class="contacts-icon" src="#"alt="Вконтакте">
+<a class="contacts-item" href="#" alt="Мы в контакте"></a>
+<img class="contacts-icon" src="#"alt="Телеграмм">
+<a class="contacts-item" href="#" alt="Мы в телеграмме"></a>
+<img class="contacts-icon" src="#"alt="Youtube">
+<a class="contacts-item" href="#" alt="Мы на youtube"></a>
+<address class="contact-address">
+  <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+</address>
+<img class="logo-academy" src="#" alt="htmlacademy">
+</section>
 
 </footer>
+
 
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
 
