--- a/index.html
+++ b/index.html
@@ -95,15 +95,16 @@
 </section>
 <section class="contacts">
 <img class="contacts-icon" src="#"alt="Вконтакте">
-<a class="contacts-item" href="#" alt="Мы в контакте"></a>
+<a class="contacts-item" href="https://vk.com/htmlacademy" alt="Мы в контакте"></a>
 <img class="contacts-icon" src="#"alt="Телеграмм">
-<a class="contacts-item" href="#" alt="Мы в телеграмме"></a>
+<a class="contacts-item" href="https://t.me/htmlacademy" alt="Мы в телеграмме"></a>
 <img class="contacts-icon" src="#"alt="Youtube">
-<a class="contacts-item" href="#" alt="Мы на youtube"></a>
+<a class="contacts-item" href="https://www.youtube.com/user/htmlacademyru" alt="Мы на youtube"></a>
 <address class="contact-address">
   <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
 </address>
-<img class="logo-academy" src="#" alt="htmlacademy">
+<a class="contacts-item" href="https://htmlacademy.ru/">
+  <img class="contacts-icon" src="#" alt="htmlacademy">
 </section>
 
 </footer>
