--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 <header class="page-header">
-<nav class="navigation>
+<nav class="navigation">
   <ul class="navigation-list">
     <li class="navigation-item">
       <a class="navigation-link" href="#">Главная</a>
