--- a/catalog.html
+++ b/catalog.html
@@ -56,6 +56,26 @@
         <input type="radio" id="radioButton" name="Мотель" value="motel">
         <p class="radio-name">Апартаменты</p>
         <input type="radio" id="radioButton" name="Апартаменты" value="apartaments">
-
       </section>
+      <div class="input-namber">
+        <h2 class="input-name">Стоимость, ₽:</h2>
+      <form><input type="number" min="0" value="0"></form>
+      <form><input type="number" max="11000" value="9000"></form>
+      </div>
+      <input class="slider" type="range" min="0" max="11000" step="1" value="9000">
+      <input class="button-catalog" type="button" name="применить" value="применить">
+      <input class="button-catalog-reset" type="button" name="сбросить" value="сбросить">
+
+<section class="catalog-head">
+<h1 class="filter">Найдено гостиниц: 38</h1>
+<form>
+  <p><select name="select" multiple>
+   <option selected value="cheapest">Самые дешевые</option>
+   <div class="view-icon">
+    <img src="#">
+    <img src="#">
+    <img src="#">
+   </div>
+</section>
+
     </body>
