--- a/catalog.html
+++ b/catalog.html
@@ -9,6 +9,9 @@
   <body>
     <header class="page-header">
       <nav class="navigation">
+        <div class="navigation-logo">
+          <img src="#" alt="Логотип сайта в шапке">
+         </div>
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link" href="#">Главная</a>
@@ -71,11 +74,25 @@
 <form>
   <p><select name="select" multiple>
    <option selected value="cheapest">Самые дешевые</option>
-   <div class="view-icon">
-    <img src="#">
-    <img src="#">
-    <img src="#">
-   </div>
+       <div class="sorting-view">
+      <a class="sorting-item sorting-item-tile sorting-item-active" href="#" aria-label="Вид плитками"></a>
+      <a class="sorting-item sorting-item-slideshow" href="#" aria-label="Вид превью"></a>
+      <a class="sorting-item sorting-item-list" href="#" aria-label="Вид списком"></a>
+    </div>
+
+</section>
+<section class="hotels">
+<div class="hotel-resort">
+<div class="hotels-rating-star star">
+  <img class="hotel-picture" img src="#" href="#">
+  <h3> Amara Resort & Spa </h3>
+  <p> Гостиница</p> <Br>
+    <p>От 4000 ₽</p>
+  <span class="star" img src="#"></span>
+  <span class="star" img src="#"></span>
+  <span class="star" img src="#"></span>
+  <span class="star" img src="#"></span>
+</div>
 </section>
 
     </body>
