--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <body>
 <header class="page-header">
 <nav class="navigation">
+  <div class="navigation-logo">
+   <img src="#" alt="Логотип сайта в шапке">
+  </div>
   <ul class="navigation-list">
     <li class="navigation-item">
       <a class="navigation-link" href="#">Главная</a>
@@ -42,25 +45,54 @@
 <section page-items>
     <ul class="description-list">
 <li class="description-head">
+  <div class="descripton-reason-one">
 <h3>Настоящий городок</h3>
+</div>
+</li>
+<li>
+<div class="description-picture">
+  <img src="#" alt="Фото города на фоне гор">
+</div>
+<div class="description-item-block">
 <p class="description-item">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+</div>
+</li>
+</ul>
 <ul class="advantages-list">
-<li class="advantages-item"></li>
+<li class="advantages-item">
+  <div class="advantges-block">
 <h4 class="advantages-head">Небольшая площадь</h4>
 <p class="advantages-item">Все достопримечательности находятся очень близко</p>
-<li class="advantages-item"></li>
+</div>
+</li>
+<li class="advantages-item">
+  <div class="advantges-block">
 <h4 class="advantages-head">Красивая
   дорога</h4>
-<p class="advantages-item">Ехать в Седону из Лас-Вегаса совсем не скучно!</p><li class="advantages-item"></li>
+<p class="advantages-item">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+</div>
+</li>
+<li class="advantages-item">
+  <div class="advantges-block"></div>
 <h4 class="advantages-head">Мало
   туристов</h4>
 <p class="advantages-item">Большинство едет в Гранд Каньон и толпится там</p>
-</ul>
+</div>
+</li>
 </ul>
 <ul class="description-list">
   <li class="description-head">
+        <div class="description-picture">
+<img src="#" alt="Навесной мост над каньоном">
+    </div>
+  </li>
+  <li>
+    <div class="descripton-reason-one">
   <h3>Там есть мост дьявола</h3>
   <p class="description-item">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+  </div>
+  </li>
+</ul>
   <ul class="advantages-list">
   <li class="advantages-item"></li>
   <img class="advanteges-icon" src="#"alt="Жильё">
@@ -78,7 +110,6 @@
   <p class="advantages-item">Не только китайского,
     но и настоящего местного производства!</p>
   </ul>
-</ul>
 </section>
 </main>
 <footer>
@@ -93,13 +124,19 @@
 <input type="text" name="email" value="Ваш e-mail">
 <input type="submit" value="Подписаться">
 </section>
-<section class="contacts">
-<img class="contacts-icon" src="#"alt="Вконтакте">
-<a class="contacts-item" href="https://vk.com/htmlacademy" alt="Мы в контакте"></a>
-<img class="contacts-icon" src="#"alt="Телеграмм">
-<a class="contacts-item" href="https://t.me/htmlacademy" alt="Мы в телеграмме"></a>
-<img class="contacts-icon" src="#"alt="Youtube">
-<a class="contacts-item" href="https://www.youtube.com/user/htmlacademyru" alt="Мы на youtube"></a>
+<ul class="footer-social-item">
+  <li class="Vkontakte">
+<a class="button" href="https://vk.com/htmlacademy" alt="Мы в контакте"></a>
+<span class="visually-hidden">Вконтакте</span>
+</li>
+<li class="Telegram">
+<a class="button" href="https://t.me/htmlacademy" alt="Мы в телеграмме"></a>
+<span class="visually-hidden">Телеграм</span>
+</li>
+<li class="Youtube">
+<a class="button" href="https://www.youtube.com/user/htmlacademyru" alt="Мы на youtube"></a>
+<span class="visually-hidden">Ютуб</span>
+</li>
 <address class="contact-address">
   <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
 </address>
