разметка каталога окончена без работы над ошибками

--- a/catalog.html
+++ b/catalog.html
@@ -88,11 +88,104 @@
   <h3> Amara Resort & Spa </h3>
   <p> Гостиница</p> <Br>
     <p>От 4000 ₽</p>
+    <input type="button" value="Подробнее">
+    <input type="button" value="В избранное">
   <span class="star" img src="#"></span>
   <span class="star" img src="#"></span>
   <span class="star" img src="#"></span>
   <span class="star" img src="#"></span>
+  </div>
+  <div class="hotels-rating">
+    <p>Рейтинг: 8,5</p>
+  </div>
 </div>
 </section>
+<section class="hotels">
+  <div class="hotel-Diablo">
+  <div class="hotels-rating-star star">
+    <img class="hotel-picture" img src="#" href="#">
+    <h3> Villas at Poco Diablo </h3>
+    <p> Гостиница</p> <Br>
+      <p>От 5000 ₽</p>
+      <input type="button" value="Подробнее">
+      <input type="button" value="В избранном">
+    <span class="star" img src="#"></span>
+    <span class="star" img src="#"></span>
+    <span class="star" img src="#"></span>
+    <span class="star" img src="#"></span>
+    </div>
+    <div class="hotels-rating">
+      <p>Рейтинг: 9,2</p>
+    </div>
+  </div>
+  </section>
+  <section class="hotels">
+    <div class="hotel-quail-inn">
+    <div class="hotels-rating-star star">
+      <img class="hotel-picture" img src="#" href="#">
+      <h3> Desert Quail Inn </h3>
+      <p> Гостиница</p> <Br>
+        <p>От 2500 ₽</p>
+        <input type="button" value="Подробнее">
+        <input type="button" value="В избранное">
+      <span class="star" img src="#"></span>
+      <span class="star" img src="#"></span>
+      <span class="star" img src="#"></span>
+            </div>
+      <div class="hotels-rating">
+        <p>Рейтинг: 6,9</p>
+      </div>
+    </div>
+    </section>
+    <section class="hotels">
+      <div class="hotel-greentree">
+      <div class="hotels-rating-star star">
+        <img class="hotel-picture" img src="#" href="#">
+        <h3> GreenTree Inn </h3>
+        <p> Гостиница</p> <Br>
+          <p>От 1000 ₽</p>
+          <input type="button" value="Подробнее">
+          <input type="button" value="В избранное">
+        <span class="star" img src="#"></span>
+        <span class="star" img src="#"></span>
+                </div>
+        <div class="hotels-rating">
+          <p>Рейтинг: 5,0</p>
+        </div>
+      </div>
+      </section>
 
     </body>
+    <footer>
+       <h2 class="subscribe-head">Подпишитесь на рассылку</h2>
+    <p class="subscribe-decription">Только полезная информация и никакого спама, честное бойскаутское!</p>
+    <input type="text" name="email" value="Ваш e-mail">
+    <input type="submit" value="Подписаться">
+    </section>
+    <ul class="footer-social-item">
+      <li class="Vkontakte">
+    <a class="button" href="https://vk.com/htmlacademy" alt="Мы в контакте"></a>
+    <span class="visually-hidden">Вконтакте</span>
+    </li>
+    <li class="Telegram">
+    <a class="button" href="https://t.me/htmlacademy" alt="Мы в телеграмме"></a>
+    <span class="visually-hidden">Телеграм</span>
+    </li>
+    <li class="Youtube">
+    <a class="button" href="https://www.youtube.com/user/htmlacademyru" alt="Мы на youtube"></a>
+    <span class="visually-hidden">Ютуб</span>
+    </li>
+    <address class="contact-address">
+      <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+    </address>
+    <a class="contacts-item" href="https://htmlacademy.ru/">
+      <img class="contacts-icon" src="#" alt="htmlacademy">
+    </section>
+
+    </footer>
+
+
+        <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+
+      </body>
+    </html>
