добавлен li в каталог

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
 <header class="page-header">
 <nav class="navigation">
-  <div class="navigation-logo">
+  <a class="navigation-logo" href="index.html">
    <img src="#" alt="Логотип сайта в шапке">
   </div>
   <ul class="navigation-list">
@@ -20,7 +20,7 @@
         <a class="navigation-link" href="#">О Седоне</a>
       </li>
         <li class="navigation-item">
-          <a class="navigation-link" href="#">Гостиницы</a>
+          <a class="navigation-link" href="catalog.html">Гостиницы</a>
           </li>
           </ul>
           <ul class="navigation-icon">
