--- a/catalog.html
+++ b/catalog.html
@@ -36,14 +36,21 @@
                 </ul>
         </nav>
       </header>
-
+      <ul>
+        <li>
       <h1 class="catalog-head"> Гостиницы Седоны</h1>
       <img class="icon-home" src="#" alt="Кнопка домой">
       <a class="link-home" href="index.html"></a>
       <img class="arrow" src="#" alt="стрелка">
+        </li>
+      </ul>
+      <ul>
+        <li>
       <a class="catalog-name" src="#" alt="Гостиницы"></a>
       <h2 class="catalog-list">Инфраструктура:</h2>
+      </li>
       <section class="checkbox-button">
+        </section>
         <p class="checkbox-name">Бассейн</p>
         <input type="checkbox" name="Бассейн" value="pool" checked>
         <p class="checkbox-name">Парковка</p>
@@ -72,8 +79,11 @@
 <section class="catalog-head">
 <h1 class="filter">Найдено гостиниц: 38</h1>
 <form>
-  <p><select name="select" multiple>
+  <select name="select" multiple>
    <option selected value="cheapest">Самые дешевые</option>
+   </select>
+</form>
+
        <div class="sorting-view">
       <a class="sorting-item sorting-item-tile sorting-item-active" href="#" aria-label="Вид плитками"></a>
       <a class="sorting-item sorting-item-slideshow" href="#" aria-label="Вид превью"></a>
@@ -82,78 +92,83 @@
 
 </section>
 <section class="hotels">
-<div class="hotel-resort">
-<div class="hotels-rating-star star">
-  <img class="hotel-picture" img src="#" href="#">
-  <h3> Amara Resort & Spa </h3>
-  <p> Гостиница</p> <Br>
-    <p>От 4000 ₽</p>
-    <input type="button" value="Подробнее">
-    <input type="button" value="В избранное">
-  <span class="star" img src="#"></span>
-  <span class="star" img src="#"></span>
-  <span class="star" img src="#"></span>
-  <span class="star" img src="#"></span>
-  </div>
-  <div class="hotels-rating">
-    <p>Рейтинг: 8,5</p>
-  </div>
-</div>
-</section>
-<section class="hotels">
-  <div class="hotel-Diablo">
-  <div class="hotels-rating-star star">
-    <img class="hotel-picture" img src="#" href="#">
-    <h3> Villas at Poco Diablo </h3>
-    <p> Гостиница</p> <Br>
-      <p>От 5000 ₽</p>
-      <input type="button" value="Подробнее">
-      <input type="button" value="В избранном">
-    <span class="star" img src="#"></span>
-    <span class="star" img src="#"></span>
-    <span class="star" img src="#"></span>
-    <span class="star" img src="#"></span>
-    </div>
-    <div class="hotels-rating">
-      <p>Рейтинг: 9,2</p>
-    </div>
-  </div>
-  </section>
-  <section class="hotels">
-    <div class="hotel-quail-inn">
-    <div class="hotels-rating-star star">
-      <img class="hotel-picture" img src="#" href="#">
-      <h3> Desert Quail Inn </h3>
-      <p> Гостиница</p> <Br>
-        <p>От 2500 ₽</p>
-        <input type="button" value="Подробнее">
-        <input type="button" value="В избранное">
-      <span class="star" img src="#"></span>
-      <span class="star" img src="#"></span>
-      <span class="star" img src="#"></span>
-            </div>
-      <div class="hotels-rating">
-        <p>Рейтинг: 6,9</p>
-      </div>
-    </div>
-    </section>
-    <section class="hotels">
-      <div class="hotel-greentree">
+  <li class="hotels-item">
+    <a class="hotels-img" href="#">
+      <img src="img/hotel-1.jpg" alt="Amara Resort & Spa" width="180" height="120">
+    </a>
+    <div class="hotels-descript">
+      <h2 class="hotels-title">Amara Resort & Spa</h2>
+      <span class="hotels-type">Гостиница</span>
+      <span class="hotels-price">От 4000 ₽</span>
+      <a class="button hotels-button hotels-button-more" href="#">Подробнее</a>
+      <button class="button button-blue hotels-button hotels-favorites">В избранное</button>
       <div class="hotels-rating-star star">
-        <img class="hotel-picture" img src="#" href="#">
-        <h3> GreenTree Inn </h3>
-        <p> Гостиница</p> <Br>
-          <p>От 1000 ₽</p>
-          <input type="button" value="Подробнее">
-          <input type="button" value="В избранное">
-        <span class="star" img src="#"></span>
-        <span class="star" img src="#"></span>
-                </div>
-        <div class="hotels-rating">
-          <p>Рейтинг: 5,0</p>
-        </div>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
       </div>
-      </section>
+      <span class="hotels-rating-text">Рейтинг:8,5</span>
+    </div>
+  </li>
+  <li class="hotels-item">
+    <a class="hotels-img" href="#">
+      <img src="img/hotel-1.jpg" alt="Villas at Poco Diablo" width="180" height="120">
+    </a>
+    <div class="hotels-descript">
+      <h2 class="hotels-title">Villas at Poco Diablo</h2>
+      <span class="hotels-type">Гостиница</span>
+      <span class="hotels-price">От 5000 ₽</span>
+      <a class="button hotels-button hotels-button-more" href="#">Подробнее</a>
+      <button class="button button-blue hotels-button hotels-favorites">В избранном</button>
+      <div class="hotels-rating-star star">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <span class="hotels-rating-text">Рейтинг:9,2</span>
+    </div>
+  </li>
+  <li class="hotels-item">
+    <a class="hotels-img" href="#">
+      <img src="img/hotel-1.jpg" alt="Desert Quail Inn" width="180" height="120">
+    </a>
+    <div class="hotels-descript">
+      <h2 class="hotels-title">Desert Quail Inn</h2>
+      <span class="hotels-type">Гостиница</span>
+      <span class="hotels-price">От 2500 ₽</span>
+      <a class="button hotels-button hotels-button-more" href="#">Подробнее</a>
+      <button class="button button-blue hotels-button hotels-favorites">В избранное</button>
+      <div class="hotels-rating-star star">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <span class="hotels-rating-text">Рейтинг:6,9</span>
+    </div>
+  </li>
+  <li class="hotels-item">
+    <a class="hotels-img" href="#">
+      <img src="img/hotel-1.jpg" alt="GreenTree Inn" width="180" height="120">
+    </a>
+    <div class="hotels-descript">
+      <h2 class="hotels-title">GreenTree Inn</h2>
+      <span class="hotels-type">Гостиница</span>
+      <span class="hotels-price">От 1000 ₽</span>
+      <a class="button hotels-button hotels-button-more" href="#">Подробнее</a>
+      <button class="button button-blue hotels-button hotels-favorites">В избранное</button>
+      <div class="hotels-rating-star star">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <span class="hotels-rating-text">Рейтинг:5,0</span>
+    </div>
+  </li>
+
 
     </body>
     <footer>
