--- a/catalog.html
+++ b/catalog.html
@@ -7,33 +7,32 @@
 
   </head>
   <body>
-    <header class="page-header">
-      <nav class="navigation">
-        <div class="navigation-logo">
-          <img src="#" alt="Логотип сайта в шапке">
-         </div>
-        <ul class="navigation-list">
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">Главная</a>
-          </li>
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">О Седоне</a>
-            </li>
-              <li class="navigation-item">
-                <a class="navigation-link" href="#">Гостиницы</a>
-                </li>
-        </ul>
-                <ul class="navigation-icon">
-                  <li class="navigation-item">
-                    <a class="navigation-link" href="#">Поиск</a>
-                  </li>
-                    <li class="navigation-item">
-                      <a class="navigation-link" href="#">Уведомления</a>
-                    </li>
-                      <li class="navigation-item">
-                        <a class="navigation-link" href="#">Хочу сюда!</a>
-                        </li>
-                </ul>
+  <header class="page-header">
+    <nav class="navigation">
+      <a class="navigation-logo" href="index.html">
+      <img src="#" alt="Логотип сайта в шапке">
+      <ul class="navigation-list">
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">Главная</a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">О Седоне</a>
+        </li>
+        <li class="navigation-item">
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
+        </li>
+      </ul>
+      <ul class="navigation-icon">
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">Поиск</a>
+        </li>
+        <li class="navigation-item">
+            <a class="navigation-link" href="#">Уведомления</a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">Хочу сюда!</a>
+        </li>
+      </ul>
         </nav>
       </header>
       <main class="main-inner">
@@ -241,42 +240,46 @@
   </li>
 </ul>
 </section>
-      </main>
+      <footer class="section">
+        <section class="subscribe">
+        <h2 class="subscribe-head">Подпишитесь на рассылку</h2>
+        <p class="subscribe-decription">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+            <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email" required>
+        </form>
+          <button class="button newsletter-button" type="submit">
+            <span class="visually-hidden">Подписаться</span>
+          </button>
+        </section>
+      </footer>
+  </main>
+      <footer class="page-footer">
+        <ul class="footer-social-item">
+          <li class="Vkontakte">
+            <a class="button" href="https://vk.com/htmlacademy/" alt="Мы в контакте">
+              <img class="contacts-icon" src="#" alt="Вконтакте">
+            </a>
+          </li>
+          <li class="Telegram">
+            <a class="button" href="https://t.me/htmlacademy/" alt="Мы в телеграме">
+            <img class="contacts-icon" src="#" alt="Телеграм">
+            </a>
+          </li>
+          <li class="Youtube">
+            <a class="button" href="https://www.youtube.com/user/htmlacademyru/" alt="Мы на youtube">
+              <img class="contacts-icon" src="#" alt="Ютуб">
+            </a>
+          </li>
+        <address class="contact-address">
+          <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        </address>
+        <a class="contacts-item" href="https://htmlacademy.ru/">
+          <img class="contacts-icon-academy" src="#" alt="htmlacademy">
+        </section>
+      </footer>
 
 
+          <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
 
-
-    </body>
-    <footer>
-       <h2 class="subscribe-head">Подпишитесь на рассылку</h2>
-    <p class="subscribe-decription">Только полезная информация и никакого спама, честное бойскаутское!</p>
-    <input type="text" name="email" value="Ваш e-mail">
-    <input type="submit" value="Подписаться">
-    </section>
-    <ul class="footer-social-item">
-      <li class="Vkontakte">
-    <a class="button" href="https://vk.com/htmlacademy" alt="Мы в контакте"></a>
-    <span class="visually-hidden">Вконтакте</span>
-    </li>
-    <li class="Telegram">
-    <a class="button" href="https://t.me/htmlacademy" alt="Мы в телеграмме"></a>
-    <span class="visually-hidden">Телеграм</span>
-    </li>
-    <li class="Youtube">
-    <a class="button" href="https://www.youtube.com/user/htmlacademyru" alt="Мы на youtube"></a>
-    <span class="visually-hidden">Ютуб</span>
-    </li>
-    <address class="contact-address">
-      <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-    </address>
-    <a class="contacts-item" href="https://htmlacademy.ru/">
-      <img class="contacts-icon" src="#" alt="htmlacademy">
-    </section>
-
-    </footer>
-
-
-        <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
-      </body>
-    </html>
+  </body>
+</html>
