--- a/index.html
+++ b/index.html
@@ -7,147 +7,166 @@
 
   </head>
   <body>
-<header class="page-header">
-<nav class="navigation">
-  <a class="navigation-logo" href="index.html">
-   <img src="#" alt="Логотип сайта в шапке">
-  </div>
-  <ul class="navigation-list">
-    <li class="navigation-item">
-      <a class="navigation-link" href="#">Главная</a>
-    </li>
-      <li class="navigation-item">
-        <a class="navigation-link" href="#">О Седоне</a>
-      </li>
+  <header class="page-header">
+    <nav class="navigation">
+      <a class="navigation-logo" href="index.html">
+      <img src="#" alt="Логотип сайта в шапке">
+      <ul class="navigation-list">
         <li class="navigation-item">
-          <a class="navigation-link" href="catalog.html">Гостиницы</a>
-          </li>
-          </ul>
-          <ul class="navigation-icon">
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">Поиск</a>
-            </li>
-              <li class="navigation-item">
-                <a class="navigation-link" href="#">Уведомления</a>
-              </li>
-                <li class="navigation-item">
-                  <a class="navigation-link" href="#">Хочу сюда!</a>
-                  </li>
-          </ul>
-  </nav>
-</header>
-<main class="main-index">
-<h1 class="visually-hidden">Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!
-  <img class="logo" src="#"alt="Логотип сайта о Седоне">
-  <h2 class="description">Седона — небольшой городок в Аризоне,
-    заслуживающий большего!</h2>
-    <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-<section page-items>
-    <ul class="description-list">
-<li class="description-head">
-  <div class="descripton-reason-one">
-<h3>Настоящий городок</h3>
-</div>
-</li>
-<li>
-<div class="description-picture">
-  <img src="#" alt="Фото города на фоне гор">
-</div>
-<div class="description-item-block">
-<p class="description-item">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-</div>
-</li>
-</ul>
-<ul class="advantages-list">
-<li class="advantages-item">
-  <div class="advantges-block">
-<h4 class="advantages-head">Небольшая площадь</h4>
-<p class="advantages-item">Все достопримечательности находятся очень близко</p>
-</div>
-</li>
-<li class="advantages-item">
-  <div class="advantges-block">
-<h4 class="advantages-head">Красивая
-  дорога</h4>
-<p class="advantages-item">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-</div>
-</li>
-<li class="advantages-item">
-  <div class="advantges-block"></div>
-<h4 class="advantages-head">Мало
-  туристов</h4>
-<p class="advantages-item">Большинство едет в Гранд Каньон и толпится там</p>
-</div>
-</li>
-</ul>
-<ul class="description-list">
-  <li class="description-head">
-        <div class="description-picture">
-<img src="#" alt="Навесной мост над каньоном">
+          <a class="navigation-link" href="#">Главная</a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">О Седоне</a>
+        </li>
+        <li class="navigation-item">
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
+        </li>
+      </ul>
+      <ul class="navigation-icon">
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">Поиск</a>
+        </li>
+        <li class="navigation-item">
+            <a class="navigation-link" href="#">Уведомления</a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">Хочу сюда!</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main class="main-index">
+  <h1 class="visually-hidden">Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!
+    <img class="logo" src="#"alt="Логотип сайта о Седоне">
+    <h2 class="description">Седона — небольшой городок в Аризоне,
+      заслуживающий большего!</h2>
+      <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+  <section page-items>
+  <ul class="description-list">
+    <li class="description-head">
+      <div class="descripton-reason-one">
+      <h3>Настоящий городок</h3>
     </div>
-  </li>
-  <li>
-    <div class="descripton-reason-one">
-  <h3>Там есть мост дьявола</h3>
-  <p class="description-item">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-  </div>
-  </li>
-</ul>
-  <ul class="advantages-list">
-  <li class="advantages-item"></li>
-  <img class="advanteges-icon" src="#"alt="Жильё">
-    <h4 class="advantages-head">Жильё</h4>
-  <p class="advantages-item">Рекомендуем пожить в настоящем мотеле,
-    всё как в кино!</p>
-  <li class="advantages-item"></li>
-  <img class="advanteges-icon" src="#"alt="Еда">
-    <h4 class="advantages-head">Еда</h4>
-  <p class="advantages-item">Всегда заказывайте
-    топовый фирменный бургер, вы не разочаруетесь</p>
-  <li class="advantages-item"></li>
-  <img class="advanteges-icon" src="#"alt="Сувениры">
-    <h4 class="advantages-head">Сувениры</h4>
-  <p class="advantages-item">Не только китайского,
-    но и настоящего местного производства!</p>
+    </li>
+    <li>
+      <div class="description-picture">
+        <img src="#" alt="Фото города на фоне гор">
+      </div>
+      <div class="description-item-block">
+      <p class="description-item">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+      </div>
+    </li>
   </ul>
+  <ul class="advantages-list">
+    <li class="advantages-item">
+      <div class="advantges-block">
+        <h4 class="advantages-head">Небольшая площадь</h4>
+        <p class="advantages-item">Все достопримечательности находятся очень близко</p>
+      </div>
+    </li>
+    <li class="advantages-item">
+      <div class="advantges-block">
+      <h4 class="advantages-head">Красивая дорога</h4>
+      <p class="advantages-item">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+      </div>
+    </li>
+    <li class="advantages-item">
+      <div class="advantges-block"></div>
+      <h4 class="advantages-head">Мало
+        туристов</h4>
+      <p class="advantages-item">Большинство едет в Гранд Каньон и толпится там</p>
+      </div>
+    </li>
+  </ul>
+  <ul class="description-list">
+    <li class="description-head">
+      <div class="description-picture">
+        <img src="#" alt="Навесной мост над каньоном">
+      </div>
+    </li>
+    <li>
+      <div class="descripton-reason-one">
+        <h3>Там есть мост дьявола</h3>
+        <p class="description-item">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+      </div>
+    </li>
+  </ul>
+    <ul class="advantages-list">
+    <li class="advantages-item"></li>
+    <img class="advanteges-icon" src="#"alt="Жильё">
+      <h4 class="advantages-head">Жильё</h4>
+    <p class="advantages-item">Рекомендуем пожить в настоящем мотеле,
+      всё как в кино!</p>
+    <li class="advantages-item"></li>
+    <img class="advanteges-icon" src="#"alt="Еда">
+      <h4 class="advantages-head">Еда</h4>
+    <p class="advantages-item">Всегда заказывайте
+      топовый фирменный бургер, вы не разочаруетесь</p>
+    <li class="advantages-item"></li>
+    <img class="advanteges-icon" src="#"alt="Сувениры">
+      <h4 class="advantages-head">Сувениры</h4>
+    <p class="advantages-item">Не только китайского,
+      но и настоящего местного производства!</p>
+    </ul>
+  </section>
+  <footer class="section">
+    <section class="search-pull">
+  <h2 class="search-head">Заинтересовались?</h2>
+  <p class="search-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+  <button class="button-catalog" type="submit">Поиск гостиницы в Седоне</button>
+  <!--
+  <div class="hystmodal" id="myModal">
+    <div class="hystmodal__window">
+        <button data-hystclose class="hystmodal__close">Close</button>
+        Поиск гостиницы в Седоне
+        <form class="appointment-form" action="https://echo.htmlacademy.ru/" method="post">
+          <p class="appointment-form-date">
+            <label class="form-label" for="appointment-date">Дата Заезда:</label>
+            <input type="text" id="appointment-date" name="appointment-date" placeholder="01.01.2020">
+          </p>
+    </div>
+  </div>
+  -->
 </section>
+  <section class="subscribe">
+    <h2 class="subscribe-head">Подпишитесь на рассылку</h2>
+      <p class="subscribe-decription">Только полезная информация и никакого спама, честное бойскаутское!</p>
+  <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+      <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email" required>
+  </form>
+    <button class="button newsletter-button" type="submit">
+      <span class="visually-hidden">Подписаться</span>
+    </button>
+  </section>
+  </footer>
 </main>
-<footer>
-  <section class="search-pull">
-<h2 class="search-head">Заинтересовались?</h2>
-<p class="search-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-<a class="button button-all" href="#">Поиск гостиницы в седоне</a>
-</section>
-<section subscribe>
-<h2 class="subscribe-head">Подпишитесь на рассылку</h2>
-<p class="subscribe-decription">Только полезная информация и никакого спама, честное бойскаутское!</p>
-<input type="text" name="email" value="Ваш e-mail">
-<input type="submit" value="Подписаться">
-</section>
-<ul class="footer-social-item">
-  <li class="Vkontakte">
-<a class="button" href="https://vk.com/htmlacademy" alt="Мы в контакте"></a>
-<span class="visually-hidden">Вконтакте</span>
-</li>
-<li class="Telegram">
-<a class="button" href="https://t.me/htmlacademy" alt="Мы в телеграмме"></a>
-<span class="visually-hidden">Телеграм</span>
-</li>
-<li class="Youtube">
-<a class="button" href="https://www.youtube.com/user/htmlacademyru" alt="Мы на youtube"></a>
-<span class="visually-hidden">Ютуб</span>
-</li>
-<address class="contact-address">
-  <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-</address>
-<a class="contacts-item" href="https://htmlacademy.ru/">
-  <img class="contacts-icon" src="#" alt="htmlacademy">
-</section>
+<footer class="page-footer">
+  <ul class="footer-social-item">
+    <li class="Vkontakte">
+      <a class="button" href="https://vk.com/htmlacademy/" alt="Мы в контакте">
+        <img class="contacts-icon" src="#" alt="Вконтакте">
+      </a>
+    </li>
+    <li class="Telegram">
+      <a class="button" href="https://t.me/htmlacademy/" alt="Мы в телеграме">
+        <img class="contacts-icon" src="#" alt="Телеграм">
+      </a>
+    </li>
+    <li class="Youtube">
+       <a class="button" href="https://www.youtube.com/user/htmlacademyru/" alt="Мы на youtube">
+        <img class="contacts-icon" src="#" alt="Ютуб">
+       </a>
+    </li>
+  <address class="contact-address">
+    <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+  </address>
+  <a class="contacts-item" href="https://htmlacademy.ru/">
+    <img class="contacts-icon-academy" src="#" alt="htmlacademy">
+  </section>
 
-</footer>
+  </footer>
 
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+      <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
   </body>
 </html>
