--- a/index.html
+++ b/index.html
@@ -1,172 +1,164 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
 
-    <title>HTML Academy: Седона</title>
+<head>
+  <meta charset="utf-8">
 
-  </head>
-  <body>
-  <header class="page-header">
+  <title>HTML Academy: Седона</title>
+
+  <base href="https://htmlacademy-htmlcss.github.io/2214509-sedona-35/3/">
+</head>
+
+<body>
+  <header class="header">
     <nav class="navigation">
-      <a class="navigation-logo" href="index.html">
-      <img src="#" alt="Логотип сайта в шапке">
-      <ul class="navigation-list">
+      <a class="navigation-logo">
+        <img src="#" alt="Логотип Sedona" width="140" height="70">
+      </a>
+           <ul class="navigation-list list-reset">
         <li class="navigation-item">
-          <a class="navigation-link" href="#">Главная</a>
+          <a class="navigation-link navigation-link-current">Главная</a>
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href="#">О Седоне</a>
         </li>
         <li class="navigation-item">
-            <a class="navigation-link" href="catalog.html">Гостиницы</a>
+          <a class="navigation-link" href="catalog.html">Гостиницы</a>
         </li>
       </ul>
-      <ul class="navigation-icon">
-        <li class="navigation-item">
-          <a class="navigation-link" href="#">Поиск</a>
+      <ul class="navigation-list navigation-user-list list-reset">
+        <li class="navigation-user-item">
+          <a class="navigation-user-link navigation-user-link-search" href="#">
+            <span class="visually-hidden">Поиск</span>
+          </a>
         </li>
-        <li class="navigation-item">
-            <a class="navigation-link" href="#">Уведомления</a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="#">Хочу сюда!</a>
+        <li class="navigation-user-item">
+          <a class="navigation-user-link navigation-user-link-favorites" href="#">
+            <span class="visually-hidden">Избранное</span>
+            <span class="navigation-user-link-favorites-num">12</span>
+          </a>
         </li>
       </ul>
+      <a class="button navigation-button" href="#">Хочу сюда!</a>
     </nav>
   </header>
-  <main class="main-index">
-  <h1 class="visually-hidden">Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!
-    <img class="logo" src="#"alt="Логотип сайта о Седоне">
-    <h2 class="description">Седона — небольшой городок в Аризоне,
-      заслуживающий большего!</h2>
-      <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-  <section page-items>
-  <ul class="description-list">
-    <li class="description-head">
-      <div class="descripton-reason-one">
-      <h3>Настоящий городок</h3>
-    </div>
-    </li>
-    <li>
-      <div class="description-picture">
-        <img src="#" alt="Фото города на фоне гор">
+    <main class="main">
+       <section class="greeting">
+      <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
+      <div class="greeting-img">
+        <img src="#" alt="Welcome to the gargeous" width="457" height="351">
       </div>
-      <div class="description-item-block">
-      <p class="description-item">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+      <div class="greeting-descript">
+        <h2 class="greeting-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+        <p class="greeting-text">Рассмотрим причины, по которым Седона круче, чем Гранд Каньон!</p>
       </div>
-    </li>
-  </ul>
-  <ul class="advantages-list">
-    <li class="advantages-item">
-      <div class="advantges-block">
-        <h4 class="advantages-head">Небольшая площадь</h4>
-        <p class="advantages-item">Все достопримечательности находятся очень близко</p>
-      </div>
-    </li>
-    <li class="advantages-item">
-      <div class="advantges-block">
-      <h4 class="advantages-head">Красивая дорога</h4>
-      <p class="advantages-item">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-      </div>
-    </li>
-    <li class="advantages-item">
-      <div class="advantges-block"></div>
-      <h4 class="advantages-head">Мало
-        туристов</h4>
-      <p class="advantages-item">Большинство едет в Гранд Каньон и толпится там</p>
-      </div>
-    </li>
-  </ul>
-  <ul class="description-list">
-    <li class="description-head">
-      <div class="description-picture">
-        <img src="#" alt="Навесной мост над каньоном">
-      </div>
-    </li>
-    <li>
-      <div class="descripton-reason-one">
-        <h3>Там есть мост дьявола</h3>
-        <p class="description-item">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-      </div>
-    </li>
-  </ul>
-    <ul class="advantages-list">
-    <li class="advantages-item"></li>
-    <img class="advanteges-icon" src="#"alt="Жильё">
-      <h4 class="advantages-head">Жильё</h4>
-    <p class="advantages-item">Рекомендуем пожить в настоящем мотеле,
-      всё как в кино!</p>
-    <li class="advantages-item"></li>
-    <img class="advanteges-icon" src="#"alt="Еда">
-      <h4 class="advantages-head">Еда</h4>
-    <p class="advantages-item">Всегда заказывайте
-      топовый фирменный бургер, вы не разочаруетесь</p>
-    <li class="advantages-item"></li>
-    <img class="advanteges-icon" src="#"alt="Сувениры">
-      <h4 class="advantages-head">Сувениры</h4>
-    <p class="advantages-item">Не только китайского,
-      но и настоящего местного производства!</p>
+    </section>
+    <section class="advantages">
+     <h2 class="visually-hidden">Преимущества</h2>
+           <ul class="advantages-list list-reset">
+        <li class="advantages-item advantages-item-full">
+          <div class="advantages-item-container">
+            <div class="advantages-content advantages-content-blue">
+              <h3 class="advantages-title">Настоящий городок</h3>
+              <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            </div>
+            <div class="advantages-image">
+              <img src="#" alt="Фото здания в городе" width="800" height="384">
+            </div>
+          </div>
+        </li>
+        <li class="advantages-item">
+          <div class="advantages-content">
+            <h3 class="advantages-title">Небольшая площадь</h3>
+            <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+          </div>
+        </li>
+        <li class="advantages-item">
+          <div class="advantages-content">
+            <h3 class="advantages-title">Красивая дорога</h3>
+            <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </div>
+        </li>
+        <li class="advantages-item">
+          <div class="advantages-content">
+            <h3 class="advantages-title">Мало туристов</h3>
+            <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+          </div>
+        </li>
+        <li class="advantages-item advantages-item-full">
+          <div class="advantages-item-container">
+            <div class="advantages-content advantages-content-blue">
+              <h3 class="advantages-title">Там есть Мост Дьявола</h3>
+              <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            </div>
+            <div class="advantages-image">
+              <img src="#" alt="Фото моста Дьявола" width="800" height="384">
+            </div>
+          </div>
+        </li>
+      </ul>
+      <h2 class="visually-hidden">Предложения</h2>
+      <ul class="advantages-list advantages-list-recommendations list-reset">
+        <li class="advantages-item">
+          <div class="advantages-content advantages-content-home">
+            <h3 class="advantages-title">Жильё</h3>
+            <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </div>
+        </li>
+        <li class="advantages-item">
+          <div class="advantages-content advantages-content-food">
+            <h3 class="advantages-title">Еда</h3>
+            <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          </div>
+        </li>
+        <li class="advantages-item">
+          <div class="advantages-content advantages-content-plus">
+            <h3 class="advantages-title">Сувениры</h3>
+            <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
+          </div>
+        </li>
+      </ul>
+    </section>
+
+    <section class="search">
+      <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
+      <h2 class="search-title">Заинтересовались?</h2>
+      <p class="search-text">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <a class="button search-button" href="#">Поиск гостиницы в Седоне</a>
+    </section>
+    <section class="subscribe subscribe-home">
+      <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+      <p class="subscribe-text">Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
+
+      <form class="subscribe-form" action="http://echo.htmlacademy.ru" method="POST">
+        <label class="visually-hidden" for="email">Ваш email</label>
+        <input class="subscribe-input form-input" id="email" name="email" type="email" placeholder="Ваш e-mail" required>
+        <button class="button button-blue subscribe-button" type="submit">Подписаться</button>
+      </form>
+    </section>
+  </main>
+    <footer class="footer">
+     <ul class="footer-social social list-reset">
+      <li class="social-item">
+        <a class="social-link" href="https://vk.com/htmlacademy" aria-label="Vk">
+          <img src="#" alt="Вконтакте">
+        </a>
+      </li>
+      <li class="social-item">
+        <a class="social-link" href="https://t.me/htmlacademy" aria-label="Telegram">
+          <img src="#" alt="Телеграм">
+        </a>
+      </li>
+      <li class="social-item">
+        <a class="social-link" href="https://www.youtube.com/user/htmlacademyru" aria-label="Youtube">
+          <img src="#" alt="Ютуб">
+        </a>
+      </li>
     </ul>
-  </section>
-  <footer class="section">
-    <section class="search-pull">
-  <h2 class="search-head">Заинтересовались?</h2>
-  <p class="search-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-  <button class="button-catalog" type="submit">Поиск гостиницы в Седоне</button>
-  <!--
-  <div class="hystmodal" id="myModal">
-    <div class="hystmodal__window">
-        <button data-hystclose class="hystmodal__close">Close</button>
-        Поиск гостиницы в Седоне
-        <form class="appointment-form" action="https://echo.htmlacademy.ru/" method="post">
-          <p class="appointment-form-date">
-            <label class="form-label" for="appointment-date">Дата Заезда:</label>
-            <input type="text" id="appointment-date" name="appointment-date" placeholder="01.01.2020">
-          </p>
-    </div>
-  </div>
-  -->
-</section>
-  <section class="subscribe">
-    <h2 class="subscribe-head">Подпишитесь на рассылку</h2>
-      <p class="subscribe-decription">Только полезная информация и никакого спама, честное бойскаутское!</p>
-  <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-      <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email" required>
-  </form>
-    <button class="button newsletter-button" type="submit">
-      <span class="visually-hidden">Подписаться</span>
-    </button>
-  </section>
+    <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+    <a class="footer-logo" href="https://htmlacademy.ru/" aria-label="Логотип HTMLAcademy">
+      <img src="#" alt="htmlacademy">
+    </a>
   </footer>
-</main>
-<footer class="page-footer">
-  <ul class="footer-social-item">
-    <li class="Vkontakte">
-      <a class="button" href="https://vk.com/htmlacademy/" alt="Мы в контакте">
-        <img class="contacts-icon" src="#" alt="Вконтакте">
-      </a>
-    </li>
-    <li class="Telegram">
-      <a class="button" href="https://t.me/htmlacademy/" alt="Мы в телеграме">
-        <img class="contacts-icon" src="#" alt="Телеграм">
-      </a>
-    </li>
-    <li class="Youtube">
-       <a class="button" href="https://www.youtube.com/user/htmlacademyru/" alt="Мы на youtube">
-        <img class="contacts-icon" src="#" alt="Ютуб">
-       </a>
-    </li>
-  <address class="contact-address">
-    <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-  </address>
-  <a class="contacts-item" href="https://htmlacademy.ru/">
-    <img class="contacts-icon-academy" src="#" alt="htmlacademy">
-  </section>
-
-  </footer>
-
-
-      <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-  </body>
+</body>
 </html>
