--- a/catalog.html
+++ b/catalog.html
@@ -42,9 +42,8 @@
       <a class="button navigation-button" href="#">Хочу сюда!</a>
     </nav>
   </header>
-  <main>
-    <section class="catalog-hotel">
-     <header class="inner-header">
+  <main class="main">
+    <header class="inner-header">
       <h1 class="inner-header-title">Гостиницы Седоны</h1>
     </header>
     <ul class="breadcrumbs">
@@ -61,9 +60,7 @@
     </section>
       <h2 class="visually-hidden>">Список гостиниц с фильтрами</h2>
 
-    <form class="hotel=filter" action="https://echo.htmlacademy.ru/">
-
-      <fieldset class="catalog-filter-group">
+       <fieldset class="catalog-filter-group">
         <legend class="catalog-filter-title">Инфраструктура:</legend>
         <ul class="catalog-filter-list">
           <li class="catalog-filter-item">
