--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
     <header class="header">
     <nav class="navigation">
       <a class="navigation-logo" href="index.html">
-        <img src="#" alt="Логотип Sedona" width="140" height="70">
+        <img src="images/brand_sedona.png" alt="Логотип Sedona" width="140" height="70">
       </a>
       <ul class="navigation-list">
         <li class="navigation-item">
@@ -49,7 +49,7 @@
     <ul class="breadcrumbs">
       <li class="breadcrumbs-item">
         <a class="breadcrumbs-link" href="index.html">
-          <img src="#" alt="главная">
+          <img src="images/home.png" alt="главная">
         </a>
       </li>
 
@@ -110,7 +110,6 @@
       </fieldset>
       <button class="button" type="submit">Применить</button>
       <button class="button" type="submit">Сбросить</button>
-    </form> -->
     <section class="filter container">
       <h1 class="title">Гостиницы Седоны</h1>
       <ul class="breadcrumbs list-reset">
@@ -199,7 +198,7 @@
       <ul class="hotels-list list-reset">
         <li class="hotels-item">
           <a class="hotels-img" href="#">
-            <img src="img/hotel-1.jpg" alt="Amara Resort & Spa" width="180" height="120">
+            <img src="images/hotel-1.jpg" alt="Amara Resort & Spa" width="180" height="120">
           </a>
           <div class="hotels-descript">
             <h2 class="hotels-title">Amara Resort & Spa</h2>
@@ -218,7 +217,7 @@
         </li>
         <li class="hotels-item">
           <a class="hotels-img" href="#">
-            <img src="img/hotel-2.jpg" alt="Villas at Poco Diablo" width="180" height="120">
+            <img src="images/hotel-2.jpg" alt="Villas at Poco Diablo" width="180" height="120">
           </a>
           <div class="hotels-descript">
             <h2 class="hotels-title">Villas at Poco Diablo</h2>
@@ -237,7 +236,7 @@
         </li>
         <li class="hotels-item">
           <a class="hotels-img" href="#">
-            <img src="img/hotel-3.jpg" alt="Desert Quail Inn" width="180" height="120">
+            <img src="images/hotel-3.jpg" alt="Desert Quail Inn" width="180" height="120">
           </a>
           <div class="hotels-descript">
             <h2 class="hotels-title">Desert Quail Inn</h2>
@@ -255,7 +254,7 @@
         </li>
         <li class="hotels-item">
           <a class="hotels-img" href="#">
-            <img src="img/hotel-4.jpg" alt="GreenTree Inn" width="180" height="120">
+            <img src="images/hotel-4.jpg" alt="GreenTree Inn" width="180" height="120">
           </a>
           <div class="hotels-descript">
             <h2 class="hotels-title">GreenTree Inn</h2>
@@ -307,23 +306,23 @@
     <ul class="footer-social social list-reset">
       <li class="social-item">
         <a class="social-link" href="https://vk.com/htmlacademy" aria-label="Vk">
-          <img src="#" alt="Вконтакте">
+          <img src="images/Social=Vk, State=State4.png" alt="Вконтакте">
         </a>
       </li>
       <li class="social-item">
         <a class="social-link" href="https://t.me/htmlacademy" aria-label="Telegram">
-          <img src="#" alt="Телеграм">
+          <img src="images/Social=Telegram, State=State5.png" alt="Телеграм">
         </a>
       </li>
       <li class="social-item">
         <a class="social-link" href="https://www.youtube.com/user/htmlacademyru" aria-label="Youtube">
-          <img src="#" alt="Ютуб">
+          <img src="images/Social=Youtube, State=State6.png" alt="Ютуб">
         </a>
       </li>
     </ul>
     <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
     <a class="footer-logo" href="https://htmlacademy.ru/" aria-label="Логотип HTMLAcademy">
-      <img src="#" alt="htmlacademy">
+      <img src="images/Vectorhtmlacademy.png" alt="htmlacademy">
     </a>
   </footer>
 </body>
