--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="header">
     <nav class="navigation">
       <a class="navigation-logo">
-        <img src="#" alt="Логотип Sedona" width="140" height="70">
+        <img src="images/brand_sedona.png" alt="Логотип Sedona" width="140" height="70">
       </a>
            <ul class="navigation-list list-reset">
         <li class="navigation-item">
@@ -46,7 +46,7 @@
        <section class="greeting">
       <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
       <div class="greeting-img">
-        <img src="#" alt="Welcome to the gargeous" width="457" height="351">
+        <img src="images/welcome.svg" alt="Welcome to the gargeous" width="457" height="351">
       </div>
       <div class="greeting-descript">
         <h2 class="greeting-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
@@ -63,7 +63,7 @@
               <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
             <div class="advantages-image">
-              <img src="#" alt="Фото здания в городе" width="800" height="384">
+              <img src="images/photo-1.jpg" alt="Фото здания в городе" width="800" height="384">
             </div>
           </div>
         </li>
@@ -92,7 +92,7 @@
               <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </div>
             <div class="advantages-image">
-              <img src="#" alt="Фото моста Дьявола" width="800" height="384">
+              <img src="images/photo-2.jpg" alt="Фото моста Дьявола" width="800" height="384">
             </div>
           </div>
         </li>
@@ -141,23 +141,23 @@
      <ul class="footer-social social list-reset">
       <li class="social-item">
         <a class="social-link" href="https://vk.com/htmlacademy" aria-label="Vk">
-          <img src="#" alt="Вконтакте">
+          <img src="images/Social=Vk, State=State4.png" alt="Вконтакте">
         </a>
       </li>
       <li class="social-item">
         <a class="social-link" href="https://t.me/htmlacademy" aria-label="Telegram">
-          <img src="#" alt="Телеграм">
+          <img src="images/Social=Telegram, State=State5.png" alt="Телеграм">
         </a>
       </li>
       <li class="social-item">
         <a class="social-link" href="https://www.youtube.com/user/htmlacademyru" aria-label="Youtube">
-          <img src="#" alt="Ютуб">
+          <img src="images/Social=Youtube, State=State6.png" alt="Ютуб">
         </a>
       </li>
     </ul>
     <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
     <a class="footer-logo" href="https://htmlacademy.ru/" aria-label="Логотип HTMLAcademy">
-      <img src="#" alt="htmlacademy">
+      <img src="images/Vectorhtmlacademy.png" alt="htmlacademy">
     </a>
   </footer>
 </body>
