--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="styles/styles.css">
-  <base href="https://htmlacademy-htmlcss.github.io/2214509-sedona-35/3/">
+  <!--<base href="https://htmlacademy-htmlcss.github.io/2214509-sedona-35/3/">-->
 </head>
 
 <body>
