--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.ico">
     <title>HTML Academy: Седона - Каталог</title>
   </head>
 
@@ -143,20 +143,20 @@
           <li class="footer-social-item">
             <a href="https://vk.com/htmlacademy" class="button-socials">
               <span class="visually-hidden">Vkontakte.</span>
-              <img class="button-socials-icon" src="images/svg/icon-vk.svg">
+              <img class="button-socials-icon" src="images/svg/icon-vk.svg" width="18" height="16">
             </a>
           </li>
           <li class="footer-social-item">
             <a href="https://t.me/htmlacademy " class="button-socials">
               <span class="visually-hidden">Telegram.</span>
-              <img class="button-socials-icon" src="images/svg/icon-telegram.svg">
+              <img class="button-socials-icon" src="images/svg/icon-telegram.svg" width="18" height="16">
             </a>
           </li>
           <li class="footer-social-item">
 
             <a href="https://www.youtube.com/user/htmlacademyru" class="button-socials">
               <span class="visually-hidden">YouTube.</span>
-              <img class="button-socials-icon" src="images/svg/icon-youtube.svg">
+              <img class="button-socials-icon" src="images/svg/icon-youtube.svg" width="18" height="16">
             </a>
           </li>
         </ul>
@@ -168,7 +168,7 @@
       <section class="footer-about-text">
         <h2 class="visually-hidden">Сделано в HTML Academy.</h2>
           <a href="https://htmlacademy.ru/" class="footer-about-logo">
-            <img class="footer-about-logo-icon" src="images/svg/icon-htmlacademy.svg">
+            <img class="footer-about-logo-icon" src="images/svg/icon-htmlacademy.svg" width="115" height="34">
           </a>
          </section>
   </footer>
